--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1703,7 +1703,7 @@ Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
 
 \chapter{Usage Scenarios}
 
-%\section{Problem Statement}	%Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) ontologies formalizing domain knowledge, 2) formal models of systems, and 3) the formal specification of systems. Relevant languages include, but are not limited to:%?	the ontology languages OWL [OWL2], RDF [RDF, RDF-Semantics, RDFS [RDFS],%?	the modeling language UML [UML] (fUML [FUML] equips part of UML with a formal semantics)%?	general-purpose first-order languages: TPTP FOF, TPTP TFF [TPTP], F-logic [FLogic], Common Logic [CL]%?	more specialized specification logics like modal logics, temporal logics, higher-order logics, TPTP THF [TPTP]%?	more complex fully-fledged specification languages like VDM [VDM], B [B], Z [Z], CASL [CASL]%?	the rule languages in the RIF [RIF] (Rule Interchange Format) and RuleML [RuleML] families of languages, as well as in OMG PRR (at least as far they are based on monotonic logics; for non-monotonic logics, see the non-mandatory requirements section)%%This great diversity of languages is partly justified by the requirements of the domains and application areas they target, as reflected in the different technical properties of the languages. However, this diversity makes interoperability among ontologies, models, specifications and systems that are implemented using these languages more difficult. Moreover, it is not possible to find a single logical language into which all others can be mapped; rather, it is necessary to adopt a heterogeneous approach to interoperability. The submission team for the Ontology Definition Metamodel (ODM) reached a similar conclusion years ago, and elected to represent the abstract syntax of several of these languages rather than attempt to develop a new language that could be mapped to each of them. Ontologies, specifications and models will (for the purpose of this document) henceforth be abbreviated as OSM, if all three can be treated in the same way. Note that the underlying logical notion is that of a logical theory.(All terms introduced in italics are defined in the glossary below.)%%Related to the diversity of languages, there is considerable variation in the operations and relations on OSMs that are in use today:%?	matching and alignment of different ontologies covering one domain. Note that the task of finding of alignments is outside the scope of this RFP; proposals are sought that will provide a metalanguage for documenting such alignments only.%?	interpretation and refinement of OSMs%?	module extraction ? selection of small parts (suiting particular purposes) of large OSMs%?	approximation ? enabling modeling in an expressive language, with simulation and reasoning designed for performance, transaction-oriented, real-time (or near-real time), lighter weight languages %?	querying%?	ontology-based database access/data management%?	bridges between different axiomatizations, e.g. distributed description logics, E-connections%?	translations of OSMs to other languages%?	combinations of OSMs%%Heterogeneity can be seen at both the level of the logical languages as well as within the OSMs themselves. There are many domains in which multiple OSMs exist, in some cases axiomatized in the same language, and in other cases axiomatized in different logical languages. This leads to several challenges in the design and deployment of OSMs, which have been addressed by current research in ontological engineering, formal software specification and formal modeling:%%?	How can we support sharability and reusability of OSMs within the same domain?%%?	How can we merge OSMs in different domains, particularly in the cases in which the OSMs are axiomatized in different logical languages?%%?	What notions of modularity play a role when only part of an OSM is being shared or reused?%%?	What are the relationships between versions of an OSM axiomatized in different logical languages?%%These challenges can be illustrated by the following set of use cases:\section{Use case Onto-1: Interoperability between OWL and FOL ontologies}In order to achieve interoperability, during ontology development it is often necessary to describe concepts in a language more expressive than OWL. 
+%\section{Problem Statement}	%Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) ontologies formalizing domain knowledge, 2) formal models of systems, and 3) the formal specification of systems. Relevant languages include, but are not limited to:%?	the ontology languages OWL [OWL2], RDF [RDF, RDF-Semantics, RDFS [RDFS],%?	the modeling language UML [UML] (fUML [FUML] equips part of UML with a formal semantics)%?	general-purpose first-order languages: TPTP FOF, TPTP TFF [TPTP], F-logic [FLogic], Common Logic [CL]%?	more specialized specification logics like modal logics, temporal logics, higher-order logics, TPTP THF [TPTP]%?	more complex fully-fledged specification languages like VDM [VDM], B [B], Z [Z], CASL [CASL]%?	the rule languages in the RIF [RIF] (Rule Interchange Format) and RuleML [RuleML] families of languages, as well as in OMG PRR (at least as far they are based on monotonic logics; for non-monotonic logics, see the non-mandatory requirements section)%%This great diversity of languages is partly justified by the requirements of the domains and application areas they target, as reflected in the different technical properties of the languages. However, this diversity makes interoperability among ontologies, models, specifications and systems that are implemented using these languages more difficult. Moreover, it is not possible to find a single logical language into which all others can be mapped; rather, it is necessary to adopt a heterogeneous approach to interoperability. The submission team for the Ontology Definition Metamodel (ODM) reached a similar conclusion years ago, and elected to represent the abstract syntax of several of these languages rather than attempt to develop a new language that could be mapped to each of them. Ontologies, specifications and models will (for the purpose of this document) henceforth be abbreviated as OSM, if all three can be treated in the same way. Note that the underlying logical notion is that of a logical theory.(All terms introduced in italics are defined in the glossary below.)%%Related to the diversity of languages, there is considerable variation in the operations and relations on OSMs that are in use today:%?	matching and alignment of different ontologies covering one domain. Note that the task of finding of alignments is outside the scope of this RFP; proposals are sought that will provide a metalanguage for documenting such alignments only.%?	interpretation and refinement of OSMs%?	module extraction -- selection of small parts (suiting particular purposes) of large OSMs%?	approximation ? enabling modeling in an expressive language, with simulation and reasoning designed for performance, transaction-oriented, real-time (or near-real time), lighter weight languages %?	querying%?	ontology-based database access/data management%?	bridges between different axiomatizations, e.g. distributed description logics, E-connections%?	translations of OSMs to other languages%?	combinations of OSMs%%Heterogeneity can be seen at both the level of the logical languages as well as within the OSMs themselves. There are many domains in which multiple OSMs exist, in some cases axiomatized in the same language, and in other cases axiomatized in different logical languages. This leads to several challenges in the design and deployment of OSMs, which have been addressed by current research in ontological engineering, formal software specification and formal modeling:%%?	How can we support sharability and reusability of OSMs within the same domain?%%?	How can we merge OSMs in different domains, particularly in the cases in which the OSMs are axiomatized in different logical languages?%%?	What notions of modularity play a role when only part of an OSM is being shared or reused?%%?	What are the relationships between versions of an OSM axiomatized in different logical languages?%%These challenges can be illustrated by the following set of use cases:\section{Use case Onto-1: Interoperability between OWL and FOL ontologies}In order to achieve interoperability, during ontology development it is often necessary to describe concepts in a language more expressive than OWL. 
 Therefore, it is common practice to informally annotate OWL ontologies with FOL axioms (e.g., Keet's mereotopological ontology [Part-Whole], 
 Dolce Lite [Dolce-lite], BFO-OWL). OWL is used because of better tool support, FOL because of greater expressiveness. However, relegating FOL axioms to 
 informal annotations means that these are not available for machine processing. Another example of this problem is the following: For formally representing concept schemes (including taxonomies, thesauri and classification schemes) and 
@@ -1721,7 +1721,7 @@ performance (e.g., OWL EL). For this reason, currently the role of the foundatio
 domain ontologies; further, watered-down versions of the foundational ontologies in OWL (like DOLCE-lite or the OWL version of BFO) are used as basis for the 
 development of domain ontologies, be this as is, in an even less expressive version (e.g. a DOLCE-lite in OWL 2 EL), or only a relevant subset thereof (e.g., only 
 the branch of endurants). A sample orchestration of interactions between the foundational and domain ontologies in various languages is depicted in the figure below. The OntoIOp metalanguage will provide the framework for integrating different domain ontologies, aligning these to foundational ontologies [Alignment1-2] and 
-combining the aligned ontologies into a coherent integrated ontology ? even across different ontology languages. Thus, the OntoIOp metalanguage will enable 
+combining the aligned ontologies into a coherent integrated ontology -- even across different ontology languages. Thus, the OntoIOp metalanguage will enable 
 ontology developers to utilize the complete, and most expressive, foundational ontologies for ontology integration and validation purposes. 
  \section{Use Case Onto-3: Module extraction from large ontologies}Especially in the biomedical domain, ontologies tend to become very large (e.g. SNOMED CT, FMA) with over 100000 concepts and relationships. Yet, none of 
 these ontologies covers all aspects of a domain, and frequently provide coverage at various levels of specificity, with excessive detail in some areas that may not 
@@ -1729,22 +1729,41 @@ be required for all usage scenarios. Often, for a given knowledge representation
 ontologies needs to be integrated, so a comprehensive integration would be both unfeasible and unwieldy. Hence, parts (modules) of these ontologies are obtained 
 by selecting the concepts and relationships (roles) relevant for the intended application. An integrated version will then be based on these excerpts from the original 
 ontologies (i.e., modules). For example, the Juvenile Rheumatoid Arthritis ontology JRAO has been created using modules from the NCI thesaurus and GALEN 
-medical ontology. The OntoIOp metalanguage will support the description of such subsets (modules) of ontologies, as well as their alignment and integration. \section{Use case Onto-4: Interoperability between closed-world data and open-world metadata}Data collection has become easier and much more widespread over the years. This data has to be assigned a meaning somehow, which occurs traditionally in the 
+medical ontology. (See \fref{JRAO}) The OntoIOp metalanguage will support the description of such subsets (modules) of ontologies, as well as their alignment and integration.
+
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.6\textwidth]{useCaseOnto3.png}
+\caption{JRAO  -- Example for Module Extraction}
+\label{JRAO}
+\end{center}
+\end{figure}
+
+ \section{Use case Onto-4: Interoperability between closed-world data and open-world metadata}Data collection has become easier and much more widespread over the years. This data has to be assigned a meaning somehow, which occurs traditionally in the 
 form of metadata annotations. For instance, consider geographical datasets derived from satellite data and raw sensor readings. Current implementations in, e.g., 
 ecological economics require manual annotation of datasets with the information relevant for their processes. While there have been attempts to standardize such 
 information, metadata for datasets of simulation results are more difficult to standardize. Moreover, it is resource-consuming to link the data to the metadata, to 
 ensure the metadata itself is of good quality and consistent, and to actually exploit the metadata when querying the data for data analysis. The data is usually represented in a database or RDF triple store, which work with a closed world assumption on the dataset, and are not expressive enough to 
-incorporate the metadata ?background knowledge?, such as the conditions for validity of the physical laws in the model of the object of observation. These metadata 
+incorporate the metadata `background knowledge', such as the conditions for validity of the physical laws in the model of the object of observation. These metadata 
 require a more expressive language, such as OWL or Common Logic, which operate under an open-world semantics. However, it is unfeasible to translate the 
-whole large dataset into OWL or first-order logic. To ?meet in the middle?, it is possible to declare bridge rules (i.e., a mapping layer) that can link the metadata to 
+whole large dataset into OWL or first-order logic. To `meet in the middle', it is possible to declare bridge rules (i.e., a mapping layer) that can link the metadata to 
 the data. This approach can be used for intelligent data analysis that combines the data and metadata through querying the system. It enables the analysis of the 
 data on the conceptual layer, instead of users having to learn the SQL/SPARQL query languages and how the data is stored. There are various tools and theories 
 to realize this, which is collectively called Ontology-Based Data Access/Management, see also [OBDA].The languages for representing the metadata or ontology, for representing the bridge rules or mapping assertions, and for representing the data are different yet 
 they need to be orchestrated and handled smoothly in the system, be this for data analytics for large enterprises, for formulating policies, or in silico biology in the 
-sciences. The OntoIOp metalanguage will provide the framework for expressing such bridge rules in a systematic way, maintaining these, and building tools for them. \section{Use Case Onto-5: Verification of rules translating Dublin Core into PROV}The Dublin Core Metadata terms, which have been formalized as an RDF Schema vocabulary, developed initially by the digital library community, are less comprehensive but more widely used than PROV (cf. Use Case Onto-1). The rules for translating Dublin Core to the OWL subset of PROV (and, with restrictions, vice versa) are not known to yield valid instances of the PROV data model, i.e. they are not known to yield OWL ontologies consistent w.r.t. the OWL axioms that capture part of the PROV data model. This may disrupt systems that would like to reason about the provenance of an entity, and thus the assessment of the entity?s quality, reliability or trustworthiness.The Dublin Core to PROV ontology translation  is expressed partly by a symbol mapping and partly by FOL rules. These FOL rules are implemented by CONSTRUCT patterns in the SPARQL RDF query language (e.g., \url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/#dct-creator}). SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.The OntoIOp metalanguage will not only support the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology, but it will also be able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.\section{Use case Spec-1: Specification Refinements}Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
+sciences. The OntoIOp metalanguage will provide the framework for expressing such bridge rules in a systematic way, maintaining these, and building tools for them. \section{Use Case Onto-5: Verification of rules translating Dublin Core into PROV}The Dublin Core Metadata terms, which have been formalized as an RDF Schema vocabulary, developed initially by the digital library community, are less 
+comprehensive but more widely used than PROV (cf. Use Case Onto-1). The rules for translating Dublin Core to the OWL subset of PROV (and, with restrictions, 
+vice versa) are not known to yield valid instances of the PROV data model, i.e. they are not known to yield OWL ontologies consistent w.r.t. the OWL axioms that 
+capture part of the PROV data model. This may disrupt systems that would like to reason about the provenance of an entity, and thus the assessment of the 
+entity's quality, reliability or trustworthiness.The Dublin Core to PROV ontology translation%
+\footnote{\url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/}}
+  is expressed partly by a symbol mapping and partly by FOL rules. These FOL rules are implemented by CONSTRUCT patterns in the SPARQL RDF query language.%
+\footnote{E.g., \url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/\#dct-creator}} 
+SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.The OntoIOp metalanguage will not only support the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology, but it will also be able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.\section{Use case Spec-1: Specification Refinements}Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
 a formal software and hardware development process is used in order to ensure the correct functioning of systems. Typically, a requirement specification is refined 
 into a design specification and then an implementation, often involving several intermediate steps (see e.g. the V-model [V-model], although this does not require 
-formal specification).There are numerous specification formalisms in use, including the OMG?s SysML language; moreover, often during development, the formalism needs to be 
+formal specification).There are numerous specification formalisms in use, including the OMG's SysML language; moreover, often during development, the formalism needs to be 
 changed (e.g. from a specification to a programming language, or from a temporal logic to a state machine). For each of these formalisms, notions of refinement 
 have been defined and implemented. However, the lack of a standardized, logically sound language and methodology for such refinement hinders interoperability 
 among different development efforts and the reuse of refinements.The OntoIOp metalanguage will provide the capability to represent refinement that is equally applicable to all OntoIOp-conforming logical languages, and that will 
@@ -1929,7 +1948,7 @@ The \textbf{text serialization} in particular offers a syntax for abbreviating i
 An OMS implemented in DOL can comprise parts formalized in any OMS language; any serialization of DOL can literally include such parts, regardless of the OMS language serialization they have been written in. \todonote[author=Christoph Lange,date=D:201109200256+02'00',type=fyi]{advanced namespacing is the solution that addresses this requirement} Additionally, an OMS implemented in DOL can refer to any external OMSs formalized in any OMS language, as long as they can be identified in a globally unique way.
 Existing OMSs in existing XML serializations (\eg XCL) or text serializations (\eg OWL Manchester Syntax) validate as DOL OMSs with a minimum amount of syntactic adaptation. Existing OMS files/documents are usable in a DOL context without the need for modification.
 
-{\color{red}
+
 DOL does not provide a new elementary OMS language, but provides a
 layer to be used on top of existing elementary OMS languages which
 enables OMS engineers to formally express mappings between OMSs written
@@ -1952,7 +1971,7 @@ as well as complex mappings and relations between OMSs.
 \item DOL is an open, extensible standard that is not restricted to a fixed set of supported OMS language but specifies criteria for any existing or future OMS language to conform with DOL.
 \item Existing OMSs in languages conforming with DOL remain as they are; they can be enriched with DOL's modularity and annotation constructs in a non-disruptive way.
 \end{itemize}
-}
+
 \ednote{reformulate this, see RFP}
 
 
