replaced OSM → OMS

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1721,17 +1721,17 @@ Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
 
 \chapter{Goals and Usage Scenarios}
 
-There are many domains in which multiple OSMs are needed, in some
+There are many domains in which multiple OMSs are needed, in some
 cases axiomatized in the same language, and in other cases axiomatized
 in different logical languages. This leads to several challenges in
-the design and deployment of OSMs, which have been addressed by
+the design and deployment of OMSs, which have been addressed by
 current research in ontological engineering, formal software
 specification and formal modeling:
 \begin{itemize}
-\item How can we support sharability and reusability of OSMs within the same domain?
-\item How can we merge OSMs in different domains, particularly in the cases in which the OSMs are axiomatized in different logical languages?
-\item What notions of modularity play a role when only part of an OSM is being shared or reused?
-\item What are the relationships between versions of an OSM axiomatized in different logical languages?
+\item How can we support sharability and reusability of OMSs within the same domain?
+\item How can we merge OMSs in different domains, particularly in the cases in which the OMSs are axiomatized in different logical languages?
+\item What notions of modularity play a role when only part of an OMS is being shared or reused?
+\item What are the relationships between versions of an OMS axiomatized in different logical languages?
 \end{itemize}
 
 These challenges can be illustrated by the following set of use cases.
@@ -1747,28 +1747,28 @@ These challenges can be illustrated by the following set of use cases.
 %?	more complex fully-fledged specification languages like VDM [VDM], B [B], Z [Z], CASL [CASL]
 %?	the rule languages in the RIF [RIF] (Rule Interchange Format) and RuleML [RuleML] families of languages, as well as in OMG PRR (at least as far they are based on monotonic logics; for non-monotonic logics, see the non-mandatory requirements section)
 %
-%This great diversity of languages is partly justified by the requirements of the domains and application areas they target, as reflected in the different technical properties of the languages. However, this diversity makes interoperability among ontologies, models, specifications and systems that are implemented using these languages more difficult. Moreover, it is not possible to find a single logical language into which all others can be mapped; rather, it is necessary to adopt a heterogeneous approach to interoperability. The submission team for the Ontology Definition Metamodel (ODM) reached a similar conclusion years ago, and elected to represent the abstract syntax of several of these languages rather than attempt to develop a new language that could be mapped to each of them. Ontologies, specifications and models will (for the purpose of this document) henceforth be abbreviated as OSM, if all three can be treated in the same way. Note that the underlying logical notion is that of a logical theory.(All terms introduced in italics are defined in the glossary below.)
+%This great diversity of languages is partly justified by the requirements of the domains and application areas they target, as reflected in the different technical properties of the languages. However, this diversity makes interoperability among ontologies, models, specifications and systems that are implemented using these languages more difficult. Moreover, it is not possible to find a single logical language into which all others can be mapped; rather, it is necessary to adopt a heterogeneous approach to interoperability. The submission team for the Ontology Definition Metamodel (ODM) reached a similar conclusion years ago, and elected to represent the abstract syntax of several of these languages rather than attempt to develop a new language that could be mapped to each of them. Ontologies, specifications and models will (for the purpose of this document) henceforth be abbreviated as OMS, if all three can be treated in the same way. Note that the underlying logical notion is that of a logical theory.(All terms introduced in italics are defined in the glossary below.)
 %
-%Related to the diversity of languages, there is considerable variation in the operations and relations on OSMs that are in use today:
+%Related to the diversity of languages, there is considerable variation in the operations and relations on OMSs that are in use today:
 %?	matching and alignment of different ontologies covering one domain. Note that the task of finding of alignments is outside the scope of this RFP; proposals are sought that will provide a metalanguage for documenting such alignments only.
-%?	interpretation and refinement of OSMs
-%?	module extraction -- selection of small parts (suiting particular purposes) of large OSMs
+%?	interpretation and refinement of OMSs
+%?	module extraction -- selection of small parts (suiting particular purposes) of large OMSs
 %?	approximation ? enabling modeling in an expressive language, with simulation and reasoning designed for performance, transaction-oriented, real-time (or near-real time), lighter weight languages 
 %?	querying
 %?	ontology-based database access/data management
 %?	bridges between different axiomatizations, e.g. distributed description logics, E-connections
-%?	translations of OSMs to other languages
-%?	combinations of OSMs
+%?	translations of OMSs to other languages
+%?	combinations of OMSs
 %
-%Heterogeneity can be seen at both the level of the logical languages as well as within the OSMs themselves. There are many domains in which multiple OSMs exist, in some cases axiomatized in the same language, and in other cases axiomatized in different logical languages. This leads to several challenges in the design and deployment of OSMs, which have been addressed by current research in ontological engineering, formal software specification and formal modeling:
+%Heterogeneity can be seen at both the level of the logical languages as well as within the OMSs themselves. There are many domains in which multiple OMSs exist, in some cases axiomatized in the same language, and in other cases axiomatized in different logical languages. This leads to several challenges in the design and deployment of OMSs, which have been addressed by current research in ontological engineering, formal software specification and formal modeling:
 %
-%?	How can we support sharability and reusability of OSMs within the same domain?
+%?	How can we support sharability and reusability of OMSs within the same domain?
 %
-%?	How can we merge OSMs in different domains, particularly in the cases in which the OSMs are axiomatized in different logical languages?
+%?	How can we merge OMSs in different domains, particularly in the cases in which the OMSs are axiomatized in different logical languages?
 %
-%?	What notions of modularity play a role when only part of an OSM is being shared or reused?
+%?	What notions of modularity play a role when only part of an OMS is being shared or reused?
 %
-%?	What are the relationships between versions of an OSM axiomatized in different logical languages?
+%?	What are the relationships between versions of an OMS axiomatized in different logical languages?
 %
 %These challenges can be illustrated by the following set of use cases:
 
@@ -1896,7 +1896,7 @@ With DOL, one can e.g.
 \item 	formally relate the different formalizations used for DTV, relate the different formalizations using translations,
 \item 	check consistency across the different formalizations (using suitable tools),
 \item 	extract sub-modules covering specific aspects, and
-\item 	specify the OWL version to be an approximation of the Common Logic version (using a heterogeneous interpretation of OSMs).
+\item 	specify the OWL version to be an approximation of the Common Logic version (using a heterogeneous interpretation of OMSs).
 \end{itemize}
 Note that the last point does not specify what information is lost in the approximation. Indeed, DOL will provide the means to specify requirements on the approximation, e.g. that it maximally preserves the information. 
 
@@ -1932,8 +1932,8 @@ among these specifications and the tools that implement them.
 
 In the next sections, we will detail the metalanguage DOL for dealing with this variety of formalisms, with syntax, well-defined semantics and model theory. DOL 
  will distill best practices of modularity and metarelations (such as refinement and alignment) across the three areas of ontology design, formal 
-specification, and model-driven development. It will lead to the ability to specify the basis for formal interoperability even among heterogeneous OSMs. DOL will help to solve the problems described in the use cases above. It also will foster the development of OSM libraries, tools and workflows that 
-enable a better exchange and reuse of OSMs. Eventually, this will also lead to better, easier developed and maintained systems based on these OSM
+specification, and model-driven development. It will lead to the ability to specify the basis for formal interoperability even among heterogeneous OMSs. DOL will help to solve the problems described in the use cases above. It also will foster the development of OMS libraries, tools and workflows that 
+enable a better exchange and reuse of OMSs. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS
 
 
 \chapter{Design Overview}
@@ -2113,9 +2113,9 @@ as well as complex mappings and relations between OMSs.
 
 
 \section{DOL enables expression of logically heterogeneous OMSs and literal reuse of existing OMSs.}
-DOL is a mechanism for expressing logically heterogeneous OSMs. It can be used to combine sentences and structured OSMs expressed in different conforming OSM languages
-and logics into single documents or modules. With DOL, sentences or structured OSMs of previously existing OSMs in
-conforming languages can be reused by literally including them into a DOL OSM. A minimum of wrapping constructs and other annotations (e.g. for identifying the language of a sentence ) are provided. 
+DOL is a mechanism for expressing logically heterogeneous OMSs. It can be used to combine sentences and structured OMSs expressed in different conforming OMS languages
+and logics into single documents or modules. With DOL, sentences or structured OMSs of previously existing OMSs in
+conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g. for identifying the language of a sentence ) are provided. 
 \todonote[author=Christoph
 Lange,date=D:201109201457+02'00',type=todo]{Figure out what this
   feedback item from Michael Grüninger (?) means: say that there
