question about ISO metadata representation

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1779,7 +1779,7 @@ Therefore, it is common practice to informally annotate OWL ontologies with FOL 
 Dolce Lite [Dolce-lite], BFO-OWL). OWL is used because of better tool support, FOL because of greater expressiveness. However, relegating FOL axioms to 
 informal annotations means that these are not available for machine processing. 
 Another example of this problem is the following: For formally representing concept schemes (including taxonomies, thesauri and classification schemes) and 
-provenance information there are the two W3C standards SKOS (Simple Knowledge Organization System) and PROV, as well as ISO and other domain-specific 
+provenance information there are the two W3C standards SKOS (Simple Knowledge Organization System) and PROV, as well as \ednote{CL: Did we mean something like “ISO 12345” here, i.e.\ some specific ISO standard that we reference by number?}ISO and other domain-specific 
 standards for metadata representation. The semantics for the SKOS and PROV languages are largely specified as OWL ontologies; however, as OWL cannot 
 capture the full semantics, the rest is specified using some informal first-order rules . In other words, valid instance models that use SKOS or PROV may be 
 required to satisfy both OWL and FOL axioms. When solving reasoning tasks over either SKOS or PROV ontologies, OWL reasoners are not able to consider the 
