please a vector graphic of JRAO

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1813,7 +1813,7 @@ be required for all usage scenarios. Often, for a given knowledge representation
 ontologies needs to be integrated, so a comprehensive integration would be both unfeasible and unwieldy. Hence, parts (modules) of these ontologies are obtained 
 by selecting the concepts and relationships (roles) relevant for the intended application. An integrated version will then be based on these excerpts from the original 
 ontologies (i.e., modules). For example, the Juvenile Rheumatoid Arthritis ontology JRAO has been created using modules from the NCI thesaurus and GALEN 
-medical ontology. (See \fref{JRAO}) DOL will support the description of such subsets (modules) of ontologies, as well as their alignment and integration.
+medical ontology. (See \ednote{CL: can we please have a vector graphic here?}\fref{JRAO}) DOL will support the description of such subsets (modules) of ontologies, as well as their alignment and integration.
 
 
 \begin{figure}[htbp]
